Калибровка текста и анимаций

--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -40,16 +40,15 @@
         <!--Grid column-->
         <div class="col-md-4 mx-auto my-0">
 
-            <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 text-center"
+            <div class="bg-image hover-zoom ripple rounded-4 text-center"
                  data-mdb-ripple-color="light">
-                <img data-aos-delay="200" draggable="false"
+                <img draggable="false"
                      src="{% static 'images/new_photos/Wedge-removebg-preview.png' %}"
                      class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-                <img data-aos-delay="200" draggable="false"
+                <img draggable="false"
                      src="{% static 'images/new_photos/Wedge2-removebg-preview.png' %}"
                      class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-                <img data-aos-delay="200" draggable="false"
+                <img draggable="false"
                      src="{% static 'images/new_photos/Wedge3-removebg-preview.png' %}"
                      class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
             </div>
@@ -109,25 +108,27 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th data-aos="flip-right" scope="row">Клин фрикционный</th>
-                            <td data-aos="flip-right">15.8 <u>+</u> 1.26</td>
-                            <td data-aos="flip-right">212 <u>+</u> 2</td>
-                            <td data-aos="flip-right">186 <u>+</u> 2</td>
-                            <td data-aos="flip-right">190 <u>+</u> 2</td>
+                            <th scope="row">Friction wedge</th>
+                            <td>15.8 <u>+</u> 1.26</td>
+                            <td>212 <u>+</u> 2</td>
+                            <td">186 <u>+</u> 2</td>
+                            <td">190 <u>+</u> 2</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <p class="my-0">Клини виконані методом лиття з сірого чавуну СЧ350 ДСТУ 8833:2019 ”Виливки із сірого чавуну
-                з пластинчатим графітом. Загальні технічні умови”, мають порожнистий корпус. Термічна та механічна
-                обробка при виготовленні не потрібна</p>
-            <p class="my-3">В комплект поставки входит</p>
+            <p class="my-0">Wedges are produced by casting from gray cast iron grade SCH350 DSTU 8833:2019 "Casting of gray iron with lamellar graphite. General specifications," featuring a hollow body. No thermal or mechanical processing is required during manufacturing</p>
+            <p class="my-3">The package includes:</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Клини фрикційні</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Friction wedges</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на партію клинів, сертифікат якості
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Passport - for the batch of wedges
             </p>
+            <p class="my-1 mt-1 ms-3"><i
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Quality certificate</p>
+            <p class="my-1 mt-1 ms-3"><i
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Certificate of compliance</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
@@ -147,22 +148,24 @@
 
 <!--PRODUCT 2-->
 <!--Grid row-->
+<div class="container">
+
+
 <div class="row wow fadeIn">
     <!--Grid column-->
     <div class="col-md-4 mb-4 mx-auto my-0">
-        <div data-aos="fade-right"
-             class="bg-image hover-zoom ripple rounded-4 text-center"
+        <div class="bg-image hover-zoom ripple rounded-4 text-center"
              data-mdb-ripple-color="light">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/03KTM-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/04KT_F-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/05_KT_C-removebg-preview.png' %}"
                  class="w-25 w-md-50 btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/09_KT_RIZ-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
         </div>
@@ -249,11 +252,11 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th data-aos="flip-right" scope="row">Колодка типу «М»</th>
-                        <td data-aos="flip-right">14.7 <u>+</u> 0.7</td>
-                        <td data-aos="flip-right">340</td>
-                        <td data-aos="flip-right">158.5</td>
-                        <td data-aos="flip-right">97</td>
+                        <th scope="row">Type 'M' brake pad</th>
+                        <td>14.7 <u>+</u> 0.7</td>
+                        <td>340</td>
+                        <td>158.5</td>
+                        <td>97</td>
                     </tr>
                     </tbody>
                 </table>
@@ -277,11 +280,11 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th data-aos="flip-right" scope="row">Колодка типу «Ф»</th>
-                        <td data-aos="flip-right">14.6 <u>+</u> 0.7</td>
-                        <td data-aos="flip-right">408</td>
-                        <td data-aos="flip-right">80</td>
-                        <td data-aos="flip-right">125</td>
+                        <th scope="row">Type 'F' brake pad</th>
+                        <td>14.6 <u>+</u> 0.7</td>
+                        <td>408</td>
+                        <td>80</td>
+                        <td>125</td>
                     </tr>
                     </tbody>
                 </table>
@@ -305,11 +308,11 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th data-aos="flip-right" scope="row">Колодка типу «C»</th>
-                        <td data-aos="flip-right">14.8 <u>+</u> 0.74</td>
-                        <td data-aos="flip-right">408</td>
-                        <td data-aos="flip-right">80</td>
-                        <td data-aos="flip-right">125</td>
+                        <th scope="row">Type 'C' brake pad</th>
+                        <td>14.8 <u>+</u> 0.74</td>
+                        <td>408</td>
+                        <td>80</td>
+                        <td>125</td>
                     </tr>
                     </tbody>
                 </table>
@@ -318,18 +321,16 @@
         </div>
 
 
-        <p class="my-0">Колодки виконані методом лиття з чавуну, хімічний склад якого повинен
-            відповідати нормам, вказаним в ГОСТ 30249-97 мають металеву скобу і металевий каркас котрий повинен
-            бути залитий врівень із поверхнею колодки.</p>
-        <p class="my-3">В комплект поставки входит</p>
+        <p class="my-0">The pads are made by casting from cast iron, the chemical composition of which must meet the standards specified in GOST 30249-97. They feature a metal clip and a metal frame which should be cast flush with the surface of the pad.</p>
+        <p class="my-3">The package includes:</p>
         <p class="mt-3 mb-1 mt-1 ms-3"><i
-                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>колодки;</p>
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Brake pads</p>
         <p class="my-1 mt-1 ms-3"><i
-                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>паспорт - на партію колодок</p>
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Batch certificate for brake pads</p>
         <p class="my-1 mt-1 ms-3"><i
-                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>сертифікат якості</p>
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Quality certificate</p>
         <p class="my-1 mt-1 ms-3"><i
-                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>сертифікат відповідності</p>
+                class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Certificate of compliance</p>
 
         <div class="d-flex justify-content-center">
             <a data-aos="fade-up" class="" href="#">
@@ -341,27 +342,30 @@
         </div>
     </div>
 </div>
+    </div>
 <!--Content-->
 
 <hr>
 
 <!--PRODUCT 3-->
 <!--Grid row-->
+<div class="container">
+
+
 <div class="row wow fadeIn">
 
     <!--Grid column-->
     <div class="col-md-4 mx-auto my-0">
 
-        <div data-aos="fade-right"
-             class="bg-image hover-zoom ripple rounded-4 text-center"
+        <div class="bg-image hover-zoom ripple rounded-4 text-center"
              data-mdb-ripple-color="light">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/Anker-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/Anker_2-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
-            <img data-aos-delay="200" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/new_photos/Anker_3-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
         </div>
@@ -421,11 +425,11 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th data-aos="flip-right" scope="row">???</th>
-                        <td data-aos="flip-right">???</td>
-                        <td data-aos="flip-right">???</td>
-                        <td data-aos="flip-right">???</td>
-                        <td data-aos="flip-right">???</td>
+                        <th scope="row">???</th>
+                        <td>???</td>
+                        <td>???</td>
+                        <td>???</td>
+                        <td>???</td>
                     </tr>
                     </tbody>
                 </table>
@@ -456,11 +460,15 @@
     </div>
 
 </div>
+    </div>
 <!--Grid row-->
 
 <hr>
 <!--Other products-->
 <!--Grid row-->
+<div class="container">
+
+
 <div class="row d-flex justify-content-center wow fadeIn">
 
     <!--Grid column-->
@@ -477,25 +485,29 @@
     <!--Grid column-->
 
 </div>
+    </div>
 <!--Grid row-->
 
 <!--Grid row-->
+<div class="container">
+
+
 <div class="row wow fadeIn">
 
     <!--Grid column-->
     <div class="col-12 col-md-6 text-center">
 
         <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
-             data-mdb-ripple-color="primary">
-            <img data-aos="zoom-in-right" data-aos-delay="150" draggable="false"
+             data-mdb-ripple-color="primary" data-mdb-ripple-unbound="true" data-mdb-ripple-radius="50">
+            <img draggable="false"
                  src="{% static 'images/piping/zatvor-19ch16br.png' %}"
                  class="my-auto pt-3 me-3 btn-animate" alt="">
-            <img data-aos="zoom-in-right" data-aos-delay="100" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/piping/zatvor-19ch21br.png' %}" class="pt-3 me-3 btn-animate"
                  alt="">
-            <img data-aos="zoom-in-right" data-aos-delay="50" draggable="false"
+            <img draggable="false"
                  src="{% static 'images/piping/prod1.png' %}" class="img me-3 btn-animate" alt="">
-            <img data-aos="zoom-in-right" draggable="false" src="{% static 'images/vantuz1.png' %}"
+            <img draggable="false" src="{% static 'images/vantuz1.png' %}"
                  class="mt-3 btn-animate" alt="">
         </div>
         <a href="piping">
@@ -507,17 +519,17 @@
     <!--Grid column-->
     <div class="col-12 col-md-6 text-center">
         <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
-             data-mdb-ripple-color="danger">
-            <img draggable="false" data-aos="zoom-in-right" src="{% static 'images/dozhdepriemnik.png' %}" alt=""
+             data-mdb-ripple-color="danger" data-mdb-ripple-unbound="true" data-mdb-ripple-radius="50">
+            <img draggable="false" src="{% static 'images/dozhdepriemnik.png' %}" alt=""
                  class="btn-animate"
                  style="max-height: 120px">
-            <img draggable="false" data-aos="zoom-in-right" data-aos-delay="100"
+            <img draggable="false"
                  src="{% static 'images/livnevka.png' %}" alt="" class="btn-animate" style="max-height: 120px">
-            <img draggable="false" data-aos="zoom-in-right" data-aos-delay="200"
+            <img draggable="false"
                  src="{% static 'images/prod4.png' %}" alt="" class="btn-animate" style="max-height: 120px">
-            <img draggable="false" data-aos="zoom-in-right" src="{% static 'images/LYUKI-.png' %}" alt=""
+            <img draggable="false" src="{% static 'images/LYUKI-.png' %}" alt=""
                  class="my-3 btn-animate" style="max-height: 120px">
-            <img draggable="false" data-aos="zoom-in-right" data-aos-delay="100"
+            <img draggable="false"
                  src="{% static 'images/Lyuk-kvadrat2.png' %}" class="my-3 mx-3 btn-animate" alt=""
                  style="max-height: 120px">
         </div>
@@ -530,7 +542,7 @@
 <!--Grid row-->
 </div>
 <!--Main layout-->
-
+</div>
 </body>
 
 {% endblock content %}
