--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -218,11 +218,11 @@
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
                                     <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-headset fa-lg text-white fa-fw"></i></div>
+                                            class="fas fa-dollar-sign fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Technical support</p>
-                                    <p class="text-muted mb-0">support@example.com</p>
+                                    Sales department</p>
+                                    <p class="text-muted mb-0">sales@example.com</p>
                                     <p class="text-muted mb-0">+1 234-567-89</p></div>
                             </div>
                         </div>
@@ -230,11 +230,11 @@
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
                                     <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-dollar-sign fa-lg text-white fa-fw"></i></div>
+                                            class="fas fa-dolly fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Sales questions</p>
-                                    <p class="text-muted mb-0">sales@example.com</p>
+                                    Supply department</p>
+                                    <p class="text-muted mb-0">supply@example.com</p>
                                     <p class="text-muted mb-0">+1 234-567-89</p></div>
                             </div>
                         </div>
@@ -254,10 +254,10 @@
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
                                     <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-bug fa-lg text-white fa-fw"></i></div>
+                                            class="fas fa-building fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Bug report</p>
+                                    HR department</p>
                                     <p class="text-muted mb-0">bugs@example.com</p>
                                     <p class="text-muted mb-0">+1 234-567-89</p></div>
                             </div>
@@ -274,7 +274,7 @@
         <div class="container py-1">
             <div class="row">
                 <div class="col-12 text-center text-white my-0 py-0">
-                    Copyright © 2014-2023 ООО «М-ЛИТ», Все права защищены
+                    Copyright © 2014-2023 «M-LIT», All right reserved
                 </div>
             </div>
         </div>
