--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -44,7 +44,8 @@
         <div data-aos="fade-right" class="col-2">
             <!-- Navbar brand -->
             <a class="navbar-brand" href="/">
-                <img class="im-fluid mx-auto btn-animate" draggable="false" src="{% static 'images/logo.png' %}" alt="" style="max-width: 70px">
+                <img class="im-fluid mx-auto btn-animate" draggable="false" src="{% static 'images/logo.png' %}" alt=""
+                     style="max-width: 70px">
             </a>
         </div>
         <div class="col-8 text-center">
@@ -60,10 +61,10 @@
                 <ul class="navbar-nav">
                     <!-- Link -->
                     <li class="nav-item btn-animate" data-mdb-ripple-color="red">
-                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="/">{% translate 'Main' %}</a>
+                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="/">{% translate 'Главная'%}</a>
                     </li>
                     <li class="nav-item btn-animate">
-                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="/#about_us">{% translate 'About us' %}</a>
+                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="/#about_us">{% translate 'О Компании' %}</a>
                     </li>
                     <!-- Dropdown -->
                     <li class="nav-item dropdown mx-auto">
@@ -71,34 +72,34 @@
                            class="nav-link dropdown-toggle  btn-animate"
                            href="#" id="navbarDropdown" role="button"
                            data-mdb-toggle="dropdown" aria-expanded="false">
-                            {% translate 'Our products' %}
+                            {% translate 'Продукция' %}
                         </a>
                         <!-- Dropdown menu -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="badges&Pads">{% translate 'Badges / Pads' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="badges&Pads">{% translate 'Клины / Колодки' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-primary"/>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Iron Valves' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Задвижки чугунные' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Gates' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Затворы' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Plungers' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Вантузы' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-danger"/>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="iron_casting">{% translate 'Iron Casting' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="iron_casting">{% translate 'Чугунное Литье' %}</a>
                             </li>
                         </ul>
                     </li>
                     <li data-aos="fade-right" class="nav-item">
-                        <a class="nav-link btn-animate" href="#contacts">{% translate 'Contacts' %}</a>
+                        <a class="nav-link btn-animate" href="#contacts">{% translate 'Контакты' %}</a>
                     </li>
                 </ul>
             </div>
@@ -135,7 +136,7 @@
                                     class="flag-russia flag"></i>Русский</a>
                         </li>
                         <li>
-                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-ukraine flag"></i>Український</a>
+                            <a class="dropdown-item" href="#"><i class="flag-ukraine flag"></i>Український</a>
                         </li>
                         <li>
                             <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-germany flag"></i>Deutsch</a>
@@ -181,7 +182,7 @@
 <a id="scrollToTopButton" class="fs-3 shadow-0 mx-2 btn-rounded text-primary btn-animate"
    style="position: fixed; bottom: 50px; right: 40px; display: none; z-index: 100"
    href="#header">
-    <i class="fas fa-arrow-up-long fa-2x" ></i>
+    <i class="fas fa-arrow-up-long fa-2x"></i>
 </a>
 <script src="{% static 'js/button_up.js' %}"></script>
 <!--button end-->
@@ -199,69 +200,134 @@
 <!--г. Никополь, ул.Электрометаллургов, 300 – новая площадка (литейный цех)-->
 <section class="container my-5" id="contacts">
     <h2 class="fw-bold text-center my-5">
-        <u class="text-primary">Contact</u>
-        <span>Us</span>
+        <u class="text-primary">Связаться</u>
+        <span>с нами</span>
     </h2>
     <div class="card mb-3">
         <div class="row g-0 d-flex align-items-center">
             <div class="col-lg-4 d-none d-lg-flex">
                 <!--                GOOGLE MAP ENGLISH-->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2690.60915931269!2d34.3780783!3d47.59484369999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dca3cfff35358f%3A0x65128b98055957f!2sElektrometalurhiv%20St%2C%20300%2C%20Nikopol&#39;%2C%20Dnipropetrovs&#39;ka%20oblast%2C%20Ukraine%2C%2053200!5e0!3m2!1sen!2skz!4v1694529900527!5m2!1sen!2skz"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="600" height="800" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-lg-8">
-                <div class="card-body py-5 px-md-5">
+                <h3 class="text-center">ТОО «М-ЛИТ»</h3>
+                <div class="text-center">53221, Украина, Днепропетровская обл., г. Никополь, ул. Электрометаллургов,
+                    300
+                </div>
+                <div class="card-body ps-5 pe-1 py-2">
                     <div class="row gx-lg-5">
-                        <div class="col-md-6 mb-5">
+                        <h4 class="text-center my-3">Руководство</h4>
+                        <div class="col-auto mb-5 mx-0 px-1">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-dollar-sign fa-lg text-white fa-fw"></i></div>
+                                    <div class="p-3 bg-primary rounded-4 shadow">
+                                        <i class="fas fa-user fa-lg text-white fa-fw"></i>
+                                    </div>
                                 </div>
-                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Sales department</p>
-                                    <p class="text-muted mb-0">sales@example.com</p>
-                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="fw-bold mb-1">Директор Завода</p>
+                                    <p class="text-muted mb-0">Попов Евгений Святославович</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-78
+                                    </p>
+                                    <p class="text-muted mb-0 ms-5 ps-2"> (0566) 69-60-34</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span> espgenie@gmail.com
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-5">
+
+                        <div class="col-auto mb-5 mx-auto px-1">
                             <div class="d-flex align-items-start">
-                                <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-dolly fa-lg text-white fa-fw"></i></div>
+
+                                <div class="flex-grow-1 mx-0">
+                                    <p class="fw-bold mb-1">Главный Инженер</p>
+                                    <p class="text-muted mb-0">Дольник Владимир Миколайович</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 69-60-35
+                                    </p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span> olodymyr@gmail.com
+                                    </p>
                                 </div>
-                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Supply department</p>
-                                    <p class="text-muted mb-0">supply@example.com</p>
-                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+
                             </div>
                         </div>
-                        <div class="col-md-6 mb-5">
+
+                        <div class="col-auto mb-5 mx-auto px-1">
                             <div class="d-flex align-items-start">
-                                <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-newspaper fa-lg text-white fa-fw"></i></div>
+
+                                <div class="flex-grow-1 mx-0">
+                                    <p class="fw-bold mb-1">Начальник отдела технического контроля</p>
+                                    <p class="text-muted mb-0">Кочерга Ирина Николаевна</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-83
+                                    </p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span>
+                                        irinakocherga1963@gmail.com
+                                    </p>
                                 </div>
-                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    Press</p>
-                                    <p class="text-muted mb-0">press@example.com</p>
-                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 mb-5">
-                            <div class="d-flex align-items-start">
-                                <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow"><i
-                                            class="fas fa-building fa-lg text-white fa-fw"></i></div>
-                                </div>
-                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
-                                    HR department</p>
-                                    <p class="text-muted mb-0">bugs@example.com</p>
-                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
                             </div>
                         </div>
                     </div>
+
+                    <h4 class="text-center mb-3">Отдел продаж</h4>
+                    <div class="row gx-lg-5">
+                        <div class="col-auto mb-5 mx-0 px-1">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow">
+                                        <i class="fas fa-dollar-sign fa-lg text-white fa-fw"></i>
+                                    </div>
+                                </div>
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="fw-bold mb-1">Заместитель директора по маркетингу и сбыту</p>
+                                    <p class="text-muted mb-0">Зырянова Елена Анатольевна</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-82
+                                    </p>
+                                    <p class="text-muted mb-0">+38(095) 787-07-97</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span> m_lit@ukr.net
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-auto mb-5 mx-auto px-1">
+                            <div class="d-flex align-items-start">
+
+                                <div class="flex-grow-1 mx-0">
+                                    <p class="fw-bold mb-1">Начальник отдела продаж</p>
+                                    <p class="text-muted mb-0">Приладышева Татьяна Владимировна</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (050) 450-16-50
+                                    </p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-81
+                                    </p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span> mlit-sbut@ukr.net
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="text-center mb-3">Поставщикам</h4>
+                    <div class="row gx-lg-5">
+                        <div class="col-auto mb-5 mx-0 px-1">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow">
+                                        <i class="fas fa-truck-ramp-box fa-lg text-white fa-fw"></i>
+                                    </div>
+                                </div>
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="fw-bold mb-1">Заместитель директора по маркетингу и сбыту</p>
+                                    <p class="text-muted mb-0">Зырянова Елена Анатольевна</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-82
+                                    </p>
+                                    <p class="text-muted mb-0">+38(095) 787-07-97</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">Email: </span> m_lit@ukr.net
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -273,7 +339,7 @@
         <div class="container py-1">
             <div class="row">
                 <div class="col-12 text-center text-white my-0 py-0">
-                    Copyright © 2014-2023 «M-LIT», All right reserved
+                    Copyright © 2014-2024 «M-LIT», Все права защищены
                 </div>
             </div>
         </div>
