--- a/content/templates/content/product_piping.html
+++ b/content/templates/content/product_piping.html
@@ -87,7 +87,6 @@
             <h5 class="mt-2">DN 50-500 PN10, Tmax=225°C (ДСТУ ГОСТ 5762:2004)</h5>
             <h6>Корпус - СЧ-18, СЧ20, кольца и втулка - латунь</h6>
             <!-- Tabs navs -->
-            <p class="my-0">Models' table:</p>
             <ul class="nav nav-tabs" id="ex1" role="tablist">
 
                 <li data-aos="fade-right" data-aos-delay="250" class="nav-item btn-animate" role="presentation">
@@ -837,13 +836,9 @@
                         </tbody>
                     </table>
                 </div>
-                <p class="my-0 text-muted">*The fractional notation of the nominal diameter means: in the numerator DN,
-                    in the denominator the
-                    effective diameter (narrowed passage);</p>
-                <p class="my-0 text-muted">** The height is indicated by two numbers: the first number is the height of
-                    the latch in the closed
-                    state, the second number is the height of the latch in the open state.</p>
-                <p class="my-0 text-muted">***The width is indicated with an electric drive</p>
+                <p class="my-0 text-muted">*Дробное обозначение номинального диаметра означает: в числителе Ду, в знаменателе эффективный диаметр (суженный проход);</p>
+                <p class="my-0 text-muted">** Высота обозначается двумя цифрами: первая цифра — высота защелки в закрытом состоянии, вторая цифра — высота защелки в открытом состоянии.</p>
+                <p class="my-0 text-muted">***Ширина указана с электроприводом.</p>
 
                 <p class="my-3">Технические характеристики:</p>
                 <p class="mt-3 mb-1 mt-1 ms-3"><i
@@ -1656,12 +1651,8 @@
     <!--Grid column-->
     <div class="col-md-6 text-center">
 
-        <h4 class="my-4 h2">Look at our other <u class="fw-bold">products</u></h4>
+        <h4 class="my-4 h2">Взгляните на другие <u class="fw-bold text-primary">продукты</u></h4>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta
-            odit
-            voluptates,
-            quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
 
     </div>
     <!--Grid column-->
@@ -1676,19 +1667,19 @@
     <div class="col-12 col-md-6 text-center">
 
         <div class="bg-image ripple rounded-4 mb-4 text-center py-3"
-             data-mdb-ripple-color="success">
+             data-mdb-ripple-color="success" data-mdb-ripple-unbound="true" data-mdb-ripple-radius="50">
             <img data-aos="zoom-in-right" draggable="false"
                  src="{% static 'images/new_photos/Wedge-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
             <img data-aos="zoom-in-right" data-aos-delay="100" draggable="false"
-                 src="{% static 'images/new_photos/Wedge2-removebg-preview.png' %}"
+                 src="{% static 'images/new_photos/03KTM-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
             <img data-aos="zoom-in-right" data-aos-delay="200" draggable="false"
-                 src="{% static 'images/new_photos/Wedge3-removebg-preview.png' %}"
+                 src="{% static 'images/new_photos/Anker_3-removebg-preview.png' %}"
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
         </div>
         <a href="badges&Pads">
-            <button data-aos="fade-up" class="btn btn-success btn-animate">See more</button>
+            <button data-aos="fade-up" class="btn btn-success btn-animate">Подробнее</button>
         </a>
     </div>
     <!--Grid column-->
@@ -1696,7 +1687,7 @@
     <!--Grid column-->
     <div class="col-12 col-md-6 text-center">
         <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
-             data-mdb-ripple-color="danger">
+             data-mdb-ripple-color="danger" data-mdb-ripple-unbound="true" data-mdb-ripple-radius="50">
             <img draggable="false" data-aos="zoom-in-right" src="{% static 'images/dozhdepriemnik.png' %}"
                  alt=""
                  class="btn-animate"
@@ -1712,7 +1703,7 @@
                  style="max-height: 120px">
         </div>
         <a href="iron_casting">
-            <button data-aos="fade-up" class="btn btn-danger btn-animate">See more</button>
+            <button data-aos="fade-up" class="btn btn-danger btn-animate">Подробнее</button>
         </a>
     </div>
     <!--Grid column-->
