--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -212,7 +212,7 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-lg-8">
-                <h3 class="text-center">ТОО «М-ЛИТ»</h3>
+                <h3 class="text-center">ООО «М-ЛИТ»</h3>
                 <div class="text-center">53221, Украина, Днепропетровская обл., г. Никополь, ул. Электрометаллургов,
                     300
                 </div>
