--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -62,66 +62,110 @@
         <div class="row g-0">
             <div data-aos="fade-right" data-aos-duration="1000" class="col-lg-6 my-auto"><img
                     src="{% static 'images/MLIT-01.jpg' %}"
-                    class="w-75 rounded-4 shadowlg" alt="" draggable="false"></div>
+                    class="w-75 rounded-4 shadow-lg" alt="" draggable="false"></div>
             <div class="col-lg-6 my-auto">
                 <div class="card cascading-right"
-                     style=" background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
+                     style="background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
                     <div class="card-body py-5 px-md-5 shadow-lg"><h2 class="fw-bold mb-4">{% translate 'О компании'%}</h2>
-                        <p class="text-muted mb-4">ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "М-ЛИТ" (Никопольский завод
-                            трубопроводной арматуры, бывший Никопольский литейно-механический завод
-                            "Большевик") - крупное специализированное предприятие, известное в Украине и за рубежом
-                            по производству запорной арматуры.</p>
-                        <div class="row mb-3">
-                            <div data-aos="zoom-in" class="col-lg-4"><p>
+                        <p class="fw-bold">ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "М-ЛИТ" </p>
+                        <div class="row">
+                            <div data-aos="zoom-in" class="col-lg-6"><p>
                                 <i class="fas fa-check-circle text-success me-2"></i>
-                                <span>{% translate 'Специалисты высшего класса' %}</span>
+                                <span>{% translate 'Трубопроводная арматура' %}</span>
                             </p>
                             </div>
-                            <div data-aos="zoom-in" data-aos-delay="400" class="col-lg-4">
+                            <div data-aos="zoom-in" data-aos-delay="400" class="col-lg-6">
                                 <p>
                                     <i class="fas fa-check-circle text-success me-2"></i>
-                                    <span>{% translate 'Качественная работа' %}</span>
-                                </p>
-                            </div>
-                            <div data-aos="zoom-in" data-aos-delay="800" class="col-lg-4">
-                                <p>
-                                    <i class="fas fa-check-circle text-success me-2"></i>
-                                    <span>{% translate 'Многолетний опыт' %}</span>
+                                    <span>{% translate 'Запасные части для подвижного состава' %}</span>
                                 </p>
                             </div>
                         </div>
-                        <p class="text-muted mb-0 d-none d-sm-block">
-                            ООО «М-ЛИТ» (НЗТА) (бывший Никопольский литейный завод и
-                            Механический завод «Большевик») — крупное специализированное предприятие, известное в
-                            Украина и зарубежье
-                            для производства запорной арматуры. Компания была создана более 115
-                            много лет назад.
-                            За этот период завод перешел от производства печных отливок к
-                            производство чугуна
-                            арматура, используемая в качестве запорных устройств на трубопроводах для перекрытия рабочих
-                            среда.
-                            компания производит чугунную арматуру с условным проходом от 50 мм до 500 мм,
-                            сорта 30ч6бр
-                            и 30ч906бр для воды и пара, с ручным управлением и электроприводом;
-                            30ч6бк для
-                            нефтепродукты и масла; 30ч47бк4 и 30ч47бр для природного газа и воды
-                            номинальным диаметром от 50 мм до 150 мм. «М-ЛИТ» сегодня – это
-                            техническое оснащение производства универсальным и специализированным оборудованием,
-                            квалифицированные специалисты, что в сочетании с большим опытом работы завода
-                            в этом
-                            промышленность позволяет коллективу предприятия выпускать широкий ассортимент продукции
-                            трубопроводная арматура. Свяжитесь с нами – и мы выполним ваш заказ быстро и
-                            качественно. Товары с логотипом нашей компании можно найти
-                            везде - от
-                            огромные металлургические заводы, тепловые электростанции, карьеры для ирригации
-                            системы в сельской местности
-                            хозяйство, коммунальное хозяйство любого населенного пункта стран СНГ. И продукты
-                            повсюду
-                            Наше предприятие работает эффективно и надежно.</p></div>
+                        <p class="">(бывшее АО «Никопольский завод трубопроводной арматуры») - крупное
+                            специализированное литейное предприятие, известное в Украине и за рубежом по производству
+                            изделий из чугуна.
+                            Предприятие оснащенно универсальным и специализированным оборудованием известных
+                            производителей :
+                        </p>
+
+                        <li class="fw-bold">Трехтонная индукционная печь «Inductotherm» (Inductotherm Europe Ltd., Великобритания)
+                            2017г.
+                        </li>
+                        <li class="fw-bold">Автоматическая формовочная линия « DISA MATCH 32Х32» (DISA Industries AS (Дания 2017г.)</li>
+                        <li class="fw-bold">Автоматическое смесеприготовительное отделение «Eirich» Maschinenfabrik Gustav Eirich GmbH &
+                            Co KG (Германия), 2017г.
+                        </li>
+                        <li class="fw-bold">Стержневые машины «Laempe» Laempe & Mössner GmbH (Німеччина2016г.).Способ изготовления
+                            Cold-box процесс. Участок больших стержней OMEGA Foundry Machinery Limited (Великобритания
+                            2016г.)
+                        </li>
+                        <li class="fw-bold">Оборудование изготовления стержневого и модельного оснащения Haas Automation Inc.(США),
+                            2017г.
+                        </li>
+                        <li class="fw-bold">Спектральная лаборатория контроля качества металла Thermo Fisher Scientific
+                            (Швейцария),
+                            2017г.
+                        </li>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="card mt-5" style="background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
+            <div class="card-body">
+                Завод располагает полным циклом производства - литейным цехом, цехом механической обработки,
+                ремонтно-инструментальным цехом, сборочным участком, испытательным комплексом и складским
+                хозяйством.
+                Основная специализация завода – производство трубопроводной арматуры и запасные части
+                подвижного состава.
+            </div>
+        </div>
+        <div class="row mt-3">
+
+            <div class="col">
+                <div class="card" style="background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
+                    <div class="card-body">
+                        <h5>1.Трубопроводная арматура</h5>
+                        <p> Предприятие выпускает промышленную трубопроводную арматуру, которая используется в качестве
+                            запорных устройств на трубопроводах для перекрытия рабочей среды. Продукцию нашего завода
+                            можно
+                            встретить повсюду - от огромных металлургических предприятий, ТЭЦ, карьеров до оросительных
+                            систем в сельском хозяйстве, в коммунальном хозяйстве любого населенного пункта.
+                        </p>
+                        <p class="fw-bold">Номенклатура выпускаемых изделий:</p>
+                        <li class="fw-bold">Задвижки 30ч6бр PN10-16 DN50-500</li>
+                        <li class="fw-bold">Задвижки 30ч906бр PN10-16 DN50-500 (для воды и пара с ручным управлением и электроприводом);
+                        </li>
+                        <li class="fw-bold">Задвижки 30ч6бк PN10-16 DN50-500 (для нефтепродуктов и масел)</li>
+                        <li class="fw-bold">Задвижки 30ч47бк4 PN6 DN50-150 (для природного газа)</li>
+                        <li class="fw-bold">Задвижки 30ч47бр PN6 DN50-150 (для воды пара, нефтепродукты, масла)</li>
+                        <li class="fw-bold">Затворы обратные поворотные без фланцевые PN16 DN50-400</li>
+                        <li class="fw-bold">Затвори обратные поворотные  фланцевые PN16 DN50-200</li>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
+                    <div class="card-body">
+                        <h5>2. Запасные части для подвижного состава</h5>
+                        <p> Продукция завода соответствует системе управления качества ISO 9001, производится и
+                            отвечает требованиям нормативной документации, имеет гигиенические сертификаты, безопасна в
+                            эксплуатации и для окружающей среды.
+                        </p>
+                        <p class="fw-bold">Номенклатура выпускаемых изделий:</p>
+                        <li class="fw-bold">Колодка тормозная  гребневая локомотивная тип «М»</li>
+                        <li class="fw-bold">Колодка тормозная фосфористая для електропоездов тип «Ф»</li>
+                        <li class="fw-bold">Колодки тормозная  для пасажирських вагонов тип «С»</li>
+                        <li class="fw-bold">Колодка тормозная КТ-РИЦ для вагонов стандарта РИЦ</li>
+                        <li class="fw-bold">Колодка тормозная электровоза ЧС</li>
+                        <li class="fw-bold">Клин фрикционный для тележки грузового вагона</li>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    <p></p>
 </section>
 <!--ABOUT US END-->
 
