--- a/content/templates/content/product_iron_casting.html
+++ b/content/templates/content/product_iron_casting.html
@@ -463,7 +463,7 @@
         <!--Grid column-->
         <div class="col-md-6 text-center">
 
-            <h4 class="my-4 h2 fw-bold">Взгляните на другие <u class="text-danger">продукты</u></h4>
+            <h4 class="my-4 h2 fw-bold">Другие <u class="text-danger">изделия</u></h4>
 
         </div>
         <!--Grid column-->
