--- a/content/templates/content/product_piping.html
+++ b/content/templates/content/product_piping.html
@@ -85,7 +85,7 @@
                 <span class="badge badge-warning mr-1"><i class="fas fa-droplet"></i> Oil</span>
             </div>
             <h5 class="mt-2">DN 50-500 PN10, Tmax=225°C (ДСТУ ГОСТ 5762:2004)</h5>
-            <h6>Корпус - СЧ-18, СЧ20, кольца и втулка - латунь</h6>
+            <h6>СЧ 180, СЧ 200, кольца и втулка - латунь</h6>
             <!-- Tabs navs -->
             <ul class="nav nav-tabs" id="ex1" role="tablist">
 
@@ -836,8 +836,8 @@
                         </tbody>
                     </table>
                 </div>
-                <p class="my-0 text-muted">*Дробное обозначение номинального диаметра означает: в числителе Ду, в знаменателе эффективный диаметр (суженный проход);</p>
-                <p class="my-0 text-muted">** Высота обозначается двумя цифрами: первая цифра — высота защелки в закрытом состоянии, вторая цифра — высота защелки в открытом состоянии.</p>
+                <p class="my-0 text-muted">*Дробное обозначение номинального диаметра означает: в числителе DN, в знаменателе эффективный диаметр (суженный проход);</p>
+                <p class="my-0 text-muted">** Высота обозначается двумя цифрами: первая цифра — высота задвижки в закрытом состоянии, вторая цифра — высота задвижки в открытом состоянии.</p>
                 <p class="my-0 text-muted">***Ширина указана с электроприводом.</p>
 
                 <p class="my-3">Технические характеристики:</p>
@@ -851,10 +851,9 @@
                     среды - не более 225(вода, пар), 90(нефтепродукты);</p>
                 <p class="my-1 mt-1 ms-3"><i
                         class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Герметичность в
-                    затворе по ГОСТ 9544, ГОСТ Р 54808</p>
+                    затворе по ДСТУ ISO 5208</p>
                 <p class="my-1 mt-1 ms-3"><i
-                        class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Климатическое
-                    исполнение У1 ГОСТ 15150</p>
+                        class="fas fa-circle-dot fa-xs me-2 text-primary"></i>В климатическом исполнении У1 для макроклиматического района с умеренным климатом</p>
                 <p class="my-1 mt-1 ms-3"><i
                         class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Присоединение фланцевое (по ДСТУ ГОСТ
                     12817).
@@ -874,7 +873,7 @@
                     <tbody>
                     <tr>
                         <th data-aos="flip-right" scope="row">Корпус, Крышка, диск, маховик, сальник, гайка</th>
-                        <td data-aos="flip-right">Чугун СЧ 200(СЧ200)</td>
+                        <td data-aos="flip-right">Чугун СЧ 200(СЧ180)</td>
                         <td data-aos="flip-right">ДСТУ 8833:2019</td>
                     </tr>
                     <tr>
@@ -897,7 +896,7 @@
 
                 <a data-aos="fade-up" class="d-flex justify-content-center" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get price
+                    <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Узнать цену
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -944,7 +943,7 @@
     <div class="col-12 col-md-8">
 
         <!--Content-->
-        <h2 class="my-0">Затворы обратные поворотные
+        <h2 class="my-0">Затворы обратные поворотные фланцевые, безфланцевые чугунные PN16
             <span>
                 <a
                         tabindex="0"
@@ -968,7 +967,7 @@
                     class="fas fa-droplet"></i> Oil</span>
             <span data-aos="fade-right" class="badge badge-warning mr-1"><i class="fas fa-droplet"></i> Oil</span>
         </div>
-        <h5 class="mt-2">DN 50-200 PN10, Tmax=225°C (ДСТУ ГОСТ 13252)</h5>
+        <h5 class="mt-2">DN 50-200 для затворов фланцевых, DN 50-400 для затворов безфланцевых PN16, Tmax=225°С (ТУ У 28.1-3919133-004:2022)</h5>
         <h6>Корпус - СЧ-200, (СЧ20, СЧ18), кольца - латунь</h6>
         <!-- Tabs navs -->
         <ul class="nav nav-tabs mb-3" id="ex2" role="tablist">
@@ -1085,7 +1084,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th data-aos="flip-right" scope="row">19ч16бр (фланцевый)</th>
+                        <th data-aos="flip-right" scope="row">19ч16бр/бк (фланцевый)</th>
                         <td>
                                 <span data-aos="flip-right" class="badge badge-primary mr-1"><i
                                         class="fas fa-droplet"></i> Water</span>
@@ -1358,7 +1357,7 @@
             <p class="mt-3 mb-1 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Затворы
                 изготовлены в
-                соответствии с ГОСТ 13252;</p>
+                соответствии с ТУ У 28.1-39195133-004:2022;</p>
             <p class="my-1 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Номинальное давление
                 - 1,6МПа;</p>
@@ -1367,10 +1366,9 @@
                 среды - не более 225(вода, пар), 90(нефтепродукты);</p>
             <p class="my-1 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Герметичность в
-                затворе по ГОСТ 13252</p>
+                затворе по ДСТУ ISO 5208</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Климатическое
-                исполнение У1 ГОСТ 15150</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>КВ климатическом исполнении У1 для макроклиматического района с умеренным климатом</p>
             <p class="mb-3 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Присоединение к
                 трубопроводу с помощью фланцев ответных по ГОСТ12815</p>
@@ -1387,29 +1385,14 @@
                 <tr>
                     <th data-aos="flip-right" scope="row">Корпус, Крышка</th>
                     <td data-aos="flip-right">Чугун СЧ</td>
-                    <td data-aos="flip-right">СОУ МПП 77.140.80-311</td>
-                </tr>
-                <tr>
-                    <th data-aos="flip-right" scope="row">Колпак</th>
-                    <td data-aos="flip-right">Сталь3</td>
-                    <td data-aos="flip-right">ДСТУ 4484/ГОСТ 535</td>
-                </tr>
-                <tr>
-                    <th data-aos="flip-right" scope="row">Шар</th>
-                    <td data-aos="flip-right">Береза 1 сорт Резина Т12.6 Д2.3.1</td>
-                    <td data-aos="flip-right">ГОСТ 9462ТУ У 30172296.003</td>
-                </tr>
-                <tr>
-                    <th data-aos="flip-right" scope="row">Прокладка</th>
-                    <td data-aos="flip-right">Паронит ПОН-Б-3</td>
-                    <td data-aos="flip-right">ГОСТ 481</td>
+                    <td data-aos="flip-right">ДСТУ 8833</td>
                 </tr>
                 </tbody>
             </table>
 
             <a data-aos="fade-up" class="d-flex justify-content-center" href="#">
                 <!-- Default input -->
-                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get price
+                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Узнать цену
                     <i class="fas fa-shopping-cart ml-1"></i>
                 </button>
             </a>
@@ -1606,7 +1589,7 @@
                 <tr>
                     <th data-aos="flip-right" scope="row">Корпус, Крышка</th>
                     <td data-aos="flip-right">Чугун СЧ</td>
-                    <td data-aos="flip-right">СОУ МПП 77.140.80-311</td>
+                    <td data-aos="flip-right">ДСТУ 8833</td>
                 </tr>
                 <tr>
                     <th data-aos="flip-right" scope="row">Колпак</th>
@@ -1628,7 +1611,7 @@
 
             <a data-aos="fade-up" class="d-flex justify-content-center" href="#">
                 <!-- Default input -->
-                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get offer
+                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Узнать цену
                     <i class="fas fa-shopping-cart ml-1"></i>
                 </button>
             </a>
@@ -1651,7 +1634,7 @@
     <!--Grid column-->
     <div class="col-md-6 text-center">
 
-        <h4 class="my-4 h2">Взгляните на другие <u class="fw-bold text-primary">продукты</u></h4>
+        <h4 class="my-4 h2">Другие <u class="fw-bold text-primary">изделия</u></h4>
 
 
     </div>
