--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -57,14 +57,27 @@
 
         <!--Grid column-->
         <div class="col-md-8">
-
+<h2 class="my-0">Клины
+            <span>
+                <a
+                        tabindex="0"
+                        class="btn btn-sm btn-rounded shadow-0 px-0 py-0 mb-1"
+                        role="button"
+                        data-mdb-toggle="popover"
+                        data-mdb-trigger="focus"
+                        title="Назначение и область применения:"
+                        data-mdb-content="Клины являются составной частью клинового гасителя колебаний тележки грузового вагона и обеспечивают гашение колебаний вагона"
+                ><i class="fa fa-circle-question fa-2x text-success"></i>
+                </a>
+            </span>
+        </h2>
             <!--Content-->
             <div class="mb-3">
                 <a href="#">
                     <span class="badge badge-success mr-1">Ж/Д</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Популярный</span>
+                    <span class="badge badge-danger mr-1">Общего назначения</span>
                 </a>
             </div>
 
@@ -79,7 +92,7 @@
                             role="tab"
                             aria-controls="ex1-tabs-1"
                             aria-selected="true"
-                    >Модель М</a
+                    >Клин фрикционный</a
                     >
                 </li>
             </ul>
@@ -105,22 +118,22 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Фрикционный клин</th>
-                            <td>15.8 <u>+</u> 1.26</td>
-                            <td>212 <u>+</u> 2</td>
-                            <td>186 <u>+</u> 2</td>
-                            <td>190 <u>+</u> 2</td>
+                            <th scope="row">Клин фрикционный</th>
+                            <td>15.8</td>
+                            <td>212</td>
+                            <td>186</td>
+                            <td>190</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <p class="my-0">Клинья изготавливаются методом литья из серого чугуна марки СЧ350 ДСТУ 8833:2019 «Отливка из
-                серого чугуна с пластинчатым графитом. Общие технические условия», отличающиеся полым телом. При
-                производстве не требуется термическая или механическая обработка.</p>
+            <p class="my-0">Клин фрикционный изготавливается методом литья из серого чугуна марки СЧ350 ДСТУ 8833:2019 «Отливка из
+                серого чугуна с пластинчатым графитом. Общие технические условия», имеет полый корпус. При
+                производстве не требуется термическая или механическая обработка. </p>
             <p class="my-3">Комплект включает:</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Фрикционный клин</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Клин фрикционный</p>
             <p class="my-1 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию
             </p>
@@ -175,13 +188,28 @@
         <!--Grid column-->
         <div class="col-md-8 mb-4">
             <!--Content-->
+            <h2 class="my-0">Тормозные колодки
+            <span>
+                <a
+                        tabindex="0"
+                        class="btn btn-sm btn-rounded shadow-0 px-0 py-0 mb-1"
+                        role="button"
+                        data-mdb-toggle="popover"
+                        data-mdb-trigger="focus"
+                        title="Назначение и область применения:"
+                        data-mdb-content="Колодки предназначены для железнодорожного подвижного состава как съемный элемент тормозной системы, рабочая поверхность которого вступает в контакт с поверхностью катания колеса"
+                ><i class="fa fa-circle-question fa-2x text-success"></i>
+                </a>
+            </span>
+        </h2>
             <!-- Tabs navs -->
             <div class="mb-3">
+
                 <a href="#">
                     <span class="badge badge-success mr-1">Ж/Д</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Популярный</span>
+                    <span class="badge badge-danger mr-1">Общего назначения</span>
                 </a>
             </div>
 
@@ -196,7 +224,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-1"
                             aria-selected="true"
-                    >Модель М</a
+                    >Тип М</a
                     >
                 </li>
 
@@ -209,7 +237,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-2"
                             aria-selected="true"
-                    >Модель C</a
+                    >Тип C</a
                     >
                 </li>
 
@@ -222,7 +250,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-3"
                             aria-selected="true"
-                    >Модель F</a
+                    >Тип Ф</a
                     >
                 </li>
             </ul>
@@ -249,13 +277,14 @@
                         <tbody>
                         <tr>
                             <th scope="row">Тормозная колодка типа «М»</th>
-                            <td>14.7 <u>+</u> 0.7</td>
+                            <td>14.7</td>
                             <td>340</td>
                             <td>158.5</td>
                             <td>97</td>
                         </tr>
                         </tbody>
                     </table>
+                    <p>Каркас (спинка) и скоба колодки изготавливаются из полос. Спинка колодки должна быть залита в уровень с поверхности колодки, сопрягаемой с башмаком и должна быть видна</p>
                 </div>
 
                 <div
@@ -276,14 +305,15 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Тормозная колодка типа «F»</th>
-                            <td>14.6 <u>+</u> 0.7</td>
+                            <th scope="row">Тормозная колодка типа «Ф»</th>
+                            <td>14.6</td>
                             <td>408</td>
                             <td>80</td>
                             <td>125</td>
                         </tr>
                         </tbody>
                     </table>
+<p>Колодки изготавливаются методом литься из чугуна, химический состав которого должен соответствовать нормам, указанным в чертеже ЛК 175-00М. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поврехностью колодки и должен быть виден</p>
                 </div>
 
                 <div
@@ -305,24 +335,22 @@
                         <tbody>
                         <tr>
                             <th scope="row">Тормозная колодка типа «C»</th>
-                            <td>14.8 <u>+</u> 0.74</td>
+                            <td>14.8</td>
                             <td>408</td>
                             <td>80</td>
                             <td>125</td>
                         </tr>
                         </tbody>
                     </table>
+                    <p>Колодки изготавливаются методом литья из чугуна, химический состав которого должен соотвутствовать нормам, указанным в ТУ У 30.2-39195133-006:2023. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поверхностью колодки и должен быть виден между ушком и направляющими</p>
                 </div>
 
             </div>
 
 
-            <p class="my-0">Колодки изготавливаются методом литья из чугуна, химический состав которого должен
-                соответствовать нормам, указанным в ГОСТ 30249-97. Они оснащены металлическим зажимом и металлической
-                рамкой, которая должна быть отлита заподлицо с поверхностью колодки.</p>
             <p class="my-3">Комплект включает:</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Фрикционный клин</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Тормозная колодка</p>
             <p class="my-1 mt-1 ms-3"><i
                     class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию колодок
             </p>
@@ -374,13 +402,27 @@
         <!--Grid column-->
         <div class="col-md-8 mb-4">
             <!--Content-->
+            <h2 class="my-0">Анкера закладные
+            <span>
+                <a
+                        tabindex="0"
+                        class="btn btn-sm btn-rounded shadow-0 px-0 py-0 mb-1"
+                        role="button"
+                        data-mdb-toggle="popover"
+                        data-mdb-trigger="focus"
+                        title="Назначение и область применения:"
+                        data-mdb-content="Анкеры закладные предназначены для упругих путевых скреплений"
+                ><i class="fa fa-circle-question fa-2x text-success"></i>
+                </a>
+            </span>
+        </h2>
             <!-- Tabs navs -->
             <div class="mb-3">
                 <a href="#">
                     <span class="badge badge-success mr-1">Ж\Д</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-info mr-1">Новый</span>
+                    <span class="badge badge-danger mr-1">Общего назначения</span>
                 </a>
             </div>
 
@@ -395,7 +437,7 @@
                             role="tab"
                             aria-controls="ex1-tabs-1"
                             aria-selected="true"
-                    >Model name</a
+                    >A3-1-6</a
                     >
                 </li>
             </ul>
@@ -421,35 +463,33 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">???</th>
-                            <td>???</td>
-                            <td>???</td>
-                            <td>???</td>
-                            <td>???</td>
+                            <th scope="row">Анкер A3-1-6</th>
+                            <td>1,3</td>
+                            <td>185</td>
+                            <td>88</td>
+                            <td>44</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <p class="my-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam autem cumque
-                deleniti deserunt dolor doloremque doloribus earum, facilis hic maiores nisi nostrum officiis provident
-                quam
-                quia quo saepe sapiente!
+            <p class="my-0">Конструктивной особенностью анкеров является то, что они замоноличуються в железнобетонные шпалы
             </p>
-            <p class="my-3">???</p>
+            <p class="my-3">К комплект входит</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>???</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Анкер закладной</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>???</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию колодок
+            </p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>???</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат качества</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>???</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат соответствия</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get price
+                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Узнать цену
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -471,7 +511,7 @@
         <!--Grid column-->
         <div class="col-md-6 text-center">
 
-            <h4 class="my-4 h2 fw-bold">Взгляните на другие <u class="text-success">продукты</u></h4>
+            <h4 class="my-4 h2 fw-bold">Другие <u class="text-success">изделия</u></h4>
 
         </div>
         <!--Grid column-->
